Update project dependencies and improve build process
- Upgrade React and React DOM to version 19
- Modify build script to ensure proper cleanup and handling of client_build directory
- Add check for client_build directory existence in main.py
- Include requirements.txt for Python dependencies
- Update .gitignore to exclude venv and client_build directories

--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf ../client_build && mv build ../client_build",
+    "build": "react-scripts build && powershell -Command \"if (Test-Path ../client_build) { Remove-Item -Recurse -Force ../client_build }; Move-Item build ../client_build\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
