Enhance FARM stack template with user management features
- Updated .gitignore to include environment and coverage files
- Revamped README.md with detailed setup instructions and features
- Improved App.js to manage users with create, read, and delete functionalities
- Enhanced App.css for better UI styling
- Added MongoDB connection handling in secrets_parser.py
- Implemented FastAPI routes for user management in abc_routes.py
- Created UserService for database interactions in abc_services.py
- Added tests for health check and user management in abc_test.py
- Introduced Docker support with docker-compose.yml for easy deployment
- Updated requirements.txt with necessary dependencies
- Added .env.example for environment variable configuration

--- a/.gitignore
+++ b/.gitignore
@@ -54,5 +54,16 @@ Thumbs.db
 # Ignore any other custom entries specific to your project
 
 venv/
+env/
+ENV/
 
 client_build/
+client/build/
+
+# Testing
+.coverage
+htmlcov/
+.pytest_cache/
+
+# MongoDB data
+data/
