feat: Establish initial FARM stack template with a React/Vite frontend, structured backend, and GitHub Actions CI/CD workflows.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,5 @@
 .git
+.github
 __pycache__
 *.pyc
 *.pyo
@@ -8,5 +9,11 @@ __pycache__
 *.tar.gz
 *.zip
 *.rar
-.dockerignore
-client
+venv/
+client/node_modules/
+client_build/
+tests/
+.flake8
+.version
+renovate.json
+sonar-project.properties
