--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
-sonar.inclusions=**/*.py
-sonar.exclusions=**/tests/**,**/venv/**
+sonar.inclusions=**/*.py,client/src/**/*.jsx,client/src/**/*.js
+sonar.exclusions=**/tests/**,**/venv/**,**/node_modules/**,client_build/**,.github/**
