--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,8 @@ API_HOST=0.0.0.0
 API_PORT=8000
 DEBUG=True
 
+# CORS Configuration (comma-separated origins)
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
 # Frontend Configuration
-REACT_APP_API_URL=http://localhost:8000/api/v1
+VITE_API_URL=http://localhost:8000/api/v1
