--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -6,7 +6,11 @@
   },
   "extends": ["eslint:recommended"],
   "parserOptions": {
-    "ecmaVersion": 2021
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "rules": {
     "indent": ["error", 2],
@@ -14,15 +18,10 @@
     "quotes": ["error", "single"],
     "no-var": "error",
     "prefer-const": "error",
-    "func-style": ["error", "expression"],
     "keyword-spacing": "error",
     "object-curly-spacing": ["error", "always"],
     "no-unused-vars": "warn",
-    "max-lines-per-function": ["error", { "max": 50 }],
     "camelcase": "error",
-    "consistent-this": ["error", "self"],
-    "class-methods-use-this": "error",
-    "no-try-catch": "error",
     "prefer-promise-reject-errors": "error"
   }
 }
