--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 fastapi==0.133.1
-uvicorn[standard]==0.38.0
+uvicorn[standard]==0.41.0
 pymongo==4.16.0
 motor==3.7.1
 pydantic==2.12.5
 pydantic[email]==2.12.5
 PyYAML==6.0.3
 python-multipart==0.0.22
+passlib[bcrypt]==1.7.4
+python-dotenv==1.1.0
 pytest==9.0.2
-httpx==0.25.2pi==0.116.1
-uvicorn[standard]==0.38.0
-pymongo==4.16.0
-motor==3.7.1
-pydantic==2.12.5
+httpx==0.28.1
+ruff==0.11.6
